# program-optimization-advice-exploration-scripts

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  analyzeReport.py  app_builder.py  app_mutator.py  app_runner.py  database_populator.py  demo.py  env_provisioner.py  extractCodelet.py  job.py  oneview_runner.py  qaas.py  result_presenter.py  service_submitter.py  setup.sh
container/: BackplaneDockerfile  CommonDockerfile  Dockerfile  LocalDockerfile  README.md  WebdbDockerfile  build-image.sh  build-local-image.sh  gen_svn_servers.sh  local_install_pip.sh  local_requirements.txt  push-image.sh  qaas-docker-seccomp-profile.json  run-container.sh  stop-container.sh  tag-production-image.sh
demo/: demo.py
demo/json_inputs/: input-CloverLeaf.json  input-cnn.json  input-kripke.json  input-lore-liv1351.json  input-lore-mvt91.json  input-miniqmc.json  input-uiuc-kripke.json
doc/: HOWTO_BACKPLANE.md
qaas-backplane/: README.md  setup.sh
qaas-backplane/config/: qaas.conf
qaas-backplane/src/: database_populator.py  env_provisioner.py  job_submit.py  qaas.py  result_presenter.py  service_submitter.py
qaas-backplane/src/utils/: cmdargs.py  comm.py  config.py  container_env_extractor.py  qaas_message.py  runcmd.py  system.py  util.py
qaas-database/: ovdb.py
qaas-extractor/: LICENSE  Makefile  README.md  extractCodelet.py  processSuccessfulLoops.py  setup.sh
qaas-extractor/container/: Dockerfile  qaas-docker-seccomp-profile.json  run-container.sh
qaas-extractor/src/cere/: replay.h  replay_driver.c
qaas-extractor/src/driver/: common.cpp  driver.cpp  driver.h
qaas-extractor/src/extractor/: extractor.cpp  extractor.h
qaas-extractor/src/tracer/: tracer.cpp  tracer.h
qaas-extractor/templates/: CMakeLists.extractor.template  CMakeLists.locator.template  CMakeLists.txt  cere.json.template
qaas-service/: app_builder.py  app_mutator.py  app_runner.py  base_runner.py  job.py  locus_lib.py  logger.py  lprof_runner.py  oneview_runner.py  profiler_runner.py  qaas_logic_compile.py  qaas_logic_initial_profile.py  qaas_logic_multicore.py  qaas_logic_unicore.py  qaas_metadata.py  utils  wrapper_runner.py
qaas-service/compilers/: amd.json  arm.json  intel.json
qaas-service/lua_scripts/: lprof_walltime.lua
qaas-web/: README.md  setup.sh
qaas-web/apps/common/backend/: alembic.ini  base_util.py  model.py  model_collection.py  oneview_model_accessor.py  qaas_model_accessor.py  qaas_ov_model_accessor.py
qaas-web/apps/config/: alembic.ini.template  qaas-web.conf  qaas-web.conf.template
qaas-web/apps/landing/frontend/: package-lock.json  package.json
qaas-web/apps/lore/backend/: db_graph.ipynb  generate_prediction_model_data.py  generate_raw_data.py  lore_migrator.py  model_accessor.py  model_collection.py  orig_src_loop_map.pkl  populate_lore_db_batch.sh  populate_lore_db_in_batch.py  prediction_model.ipynb  requirements.txt.bak  run_server.sh  send_request.py  server.py  server.wsgi  util.py
qaas-web/apps/lore/frontend/: .env  (+2 more)
qaas-web/backend/: constants.py  filters.py  install_pip.sh  lore_migrator.py  model.py  model_accessor.py  model_collection.py  ovdb.py  qaas_database.py  requirements.txt  run_server.sh  send_request.py  server.py  server.wsgi  settings.py  util.py
qaas-web/common/: landing.html
qaas-web/common/backend/: model.py  model_accessor_base.py
qaas-web/common/landing/: webpack.config.js
qaas-web/config/: qaas-web.conf
qaas-web/deployment/: 000-default.conf  entrypoint.sh  install.py  populate_db.py  start_server.py  stop_server.py  update_web.py
qaas-web/frontend/: .env  index.js  package.json  webpack.config.js
qaas-web/frontend/public/: index.html  otter_html
qaas-web/frontend/src/: App.js  index.js
qaas-web/lore/backend/: db_graph.ipynb  error.txt  generate_raw_data.py  install_pip.sh  lore_migrator.py  loremodel.py  model.py  model_accessor.py  model_collection.py  populate_lore_db_in_batch.py  requirements.txt  send_request.py  server.py  server.wsgi  util.py
qaas-web/lore/frontend/: .env  package.json  webpack.config.js
qaas-web/oneview/backend/: constants.py  filters.py  model.py  model_accessor.py  model_collection.py  ovdb.py  qaas_database.py  send_request.py  server.py  server.wsgi  util.py
qaas-web/oneview/frontend/: package.json  webpack.config.js
qaas-web/qaas/backend/: constants.py  db_graph.ipynb  lore_migrator.py  mockup_server.py  model.py  model_accessor.py  ovdb.py  qaas_database.py  send_request.py  server.py  server.wsgi  util.py
qaas-web/qaas/frontend/: .env  package.json  webpack.config.js
scripts/: app_builder.py  app_mutator.py  app_runner.py  backplane_entrypoint.sh  base_runner.py  demo.py  env_provisioner.py  job.py  locus_lib.py  oneview_runner.py  qaas.py  service_submitter.py  setup_compilers.sh  setup_compilers_container.sh  src_tree.lua  util.py
src/cere/: replay.h  replay_driver.c  tracee.h
src/driver/: common.cpp  common.h  driver.cpp  driver.h  options.h
src/extractor/: extractor.cpp  extractor.h
src/pin-trace-memory-accesses/: HuskyFuncTrace.cpp
src/tracer/: defs.h  tracer.cpp  tracer.h  util.c  util.h
templates/: CMakeLists.extractor.template  CMakeLists.restore.template  buildcmd.sh.template  loreTiming.py.template  runcmd.sh.template  scop.locus.template  scop.locus.template.demo
(+371 files in other folders)
